# fastapi-example-shorten-url

./: .gitignore  Dockerfile  Dockerfile.prod  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  prestart.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 8463cf216476_set_unique_for_generated_url.py  d65674e7612d_baseline.py
app/: db.py  main.py  schemas.py
app/handlers/: __init__.py  shorten_urls_handler.py
app/models/: ShortenUrl.py  __init__.py
app/routers/: shorten_urls.py
