[tool.poetry]
name = "fastapi-demo"
version = "0.1.0"
description = ""
authors = ["hoangnm <nguyenminhhoang210891@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
asyncpg = "0.22.0"
fastapi = "0.63.0"
SQLAlchemy = "1.4.21"
psycopg2-binary = "2.8.6"
uvicorn = "0.13.4"
alembic = "1.6.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
